Custom--app/main/default/objects/Change_Orders__c/Change_Orders__c.object-meta.xml
<CustomObject>
    <description>This is part of the Rehab deployment.  It is used by the Rehab team to track change orders.  (This may go away or be amended based on the phase two integration plans for the HD application.)</description>
    <label>Change Orders</label>
    <nameField>
        <displayFormat>Change#{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>