Custom--app/main/default/objects/Change_Orders__c/fields/Change_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Type__c</fullName>
    <label>Change Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Increase</fullName>
            </value>
            <value>
                <fullName>Reduction</fullName>
            </value>
            <value>
                <fullName>Bid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>