Custom--app/main/default/objects/Change_Orders__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <label>Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>Change_Orders</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>