Custom--app/main/default/objects/Change_Orders__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1260100 - Rehab Other</fullName>
            </value>
            <value>
                <fullName>1260125 - Rehab Demo/Waste</fullName>
            </value>
            <value>
                <fullName>1260140 - Rehab Pests/Termites</fullName>
            </value>
            <value>
                <fullName>1260150 - Rehab Cleaning</fullName>
            </value>
            <value>
                <fullName>1260175 - Rehab Initial Re-Key</fullName>
            </value>
            <value>
                <fullName>1260200 - Rehab General Contractor</fullName>
            </value>
            <value>
                <fullName>1260210 - Rehab GC Change Order</fullName>
            </value>
            <value>
                <fullName>1260300 - Rehab Roofs</fullName>
            </value>
            <value>
                <fullName>1260325 - Rehab Garage and Garage Doors</fullName>
            </value>
            <value>
                <fullName>1260350 - Rehab Exterior Surfaces</fullName>
            </value>
            <value>
                <fullName>1260375 - Rehab Sidewalks/Driveways</fullName>
            </value>
            <value>
                <fullName>1260400 - Rehab Cabinets</fullName>
            </value>
            <value>
                <fullName>1260425 - Rehab Interior Painting</fullName>
            </value>
            <value>
                <fullName>1260450 - Rehab Flooring</fullName>
            </value>
            <value>
                <fullName>1260475 - Rehab Door/Window Costs</fullName>
            </value>
            <value>
                <fullName>1260480 - Rehab Blinds</fullName>
            </value>
            <value>
                <fullName>1260500 - Rehab Countertops</fullName>
            </value>
            <value>
                <fullName>1260600 - Rehab Landscape</fullName>
            </value>
            <value>
                <fullName>1260700 - Rehab Pool Service Fees</fullName>
            </value>
            <value>
                <fullName>1260710 - Rehab Pool Maintenance Costs</fullName>
            </value>
            <value>
                <fullName>1260800 - Rehab Appliances</fullName>
            </value>
            <value>
                <fullName>1260825 - Rehab Specialty Electric</fullName>
            </value>
            <value>
                <fullName>1260850 - Rehab Specialty Plumbing</fullName>
            </value>
            <value>
                <fullName>1260900 - Rehab HVAC</fullName>
            </value>
            <value>
                <fullName>1260910 - Rehab Utilities</fullName>
            </value>
            <value>
                <fullName>1260915 - Rehab Utilities Prior Ownership</fullName>
            </value>
            <value>
                <fullName>1261000 - Rehab Capitalized Insurance</fullName>
            </value>
            <value>
                <fullName>1261100 - Rehab Capitalized Tax</fullName>
            </value>
            <value>
                <fullName>1261200 - Rehab Capitalized Interest</fullName>
            </value>
            <value>
                <fullName>1261300 - Rehab Capitalized HOA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>