Custom--app/main/default/objects/Change_Orders__c/fields/GL_Code_Original__c.field-meta.xml
<CustomField>
    <fullName>GL_Code_Original__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Code</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>Change_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>