Custom--app/main/default/objects/Change_Orders__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>Rehab__r.Property_Address__c &amp; BR() &amp; 
Rehab__r.Property_City__c &amp; ", " &amp; 
Rehab__r.Property_State__c &amp; " " &amp; 
Rehab__r.Property_Zip__c</formula>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>