Custom--app/main/default/objects/Change_Orders__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Change_Order_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Theft/Vandalism</fullName>
            </value>
            <value>
                <fullName>Replacing vs. Repairing</fullName>
            </value>
            <value>
                <fullName>Environmental Remediation</fullName>
            </value>
            <value>
                <fullName>Removal</fullName>
            </value>
            <value>
                <fullName>Vendor Default</fullName>
            </value>
            <value>
                <fullName>Natural Disaster</fullName>
            </value>
            <value>
                <fullName>Repairing vs. Replacing</fullName>
            </value>
            <value>
                <fullName>Received lower bid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>