Custom--app/main/default/objects/Change_Orders__c/fields/Rehab__c.field-meta.xml
<CustomField>
    <fullName>Rehab__c</fullName>
    <label>Rehab</label>
    <referenceTo>Rehab__c</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>Change_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>