Custom--app/main/default/objects/Change_Orders__c/fields/Rehab_Projected_Spend__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Projected_Spend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rehab Projected Spend</label>
    <referenceTo>Rehab_Projected_Spend__c</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>Change_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>