Custom--app/main/default/objects/Change_Orders__c/fields/Selected_Approved_Bid__c.field-meta.xml
<CustomField>
    <fullName>Selected_Approved_Bid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if this was the selected Bid</inlineHelpText>
    <label>Selected &amp; Approved Bid</label>
    <type>Checkbox</type>
</CustomField>