Custom--app/main/default/objects/Change_Orders__c/fields/Yardi_Property_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Property_Code_Text__c</fullName>
    <label>Yardi Property Code Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>