Custom--app/main/default/objects/Change_Orders__c/listViews/All_Change_Requests.listView-meta.xml
<ListView>
    <fullName>All_Change_Requests</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>GL_Code_Original__c</columns>
    <columns>Change_Order_Type__c</columns>
    <columns>Reason_Code__c</columns>
    <columns>Contractor__c</columns>
    <columns>Amount__c</columns>
    <columns>Selected_Approved_Bid__c</columns>
    <columns>Change_Order_Details__c</columns>
    <columns>Rehab__c</columns>
    <columns>Rehab_Projected_Spend__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Change Requests</label>
</ListView>