Custom--app/main/default/objects/Change_Orders__c/listViews/Change_orders_this_week.listView-meta.xml
<ListView>
    <fullName>Change_orders_this_week</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Rehab__c</columns>
    <columns>Contractor__c</columns>
    <columns>Change_Order_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Change orders this week</label>
</ListView>